--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "axios": "^1.1.3",
     "core-js": "^3.15.1",
     "daisyui": "^2.14.1",
     "epic-spinners": "^1.1.0",
