--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@nuxtjs/toast": "^3.3.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
-    "axios": "^1.1.3",
     "core-js": "^3.15.1",
     "daisyui": "^2.14.1",
     "epic-spinners": "^1.1.0",
+    "node-fetch": "^2.6.1",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
     "vue-content-loader": "0.2",
@@ -51,5 +51,6 @@
     "vue-jest": "^3.0.4",
     "vuex": "^3.6.2",
     "vuex-map-fields": "^1.4.1"
-  }
+  },
+  "type": "module"
 }
