--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "core-js": "^3.15.1",
     "daisyui": "^2.14.1",
     "epic-spinners": "^1.1.0",
+    "install": "^0.13.0",
     "node-fetch": "^2.6.1",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
     "parse-json": "^6.0.2",
+    "parse-jsonp": "^2.0.0",
     "vue-content-loader": "0.2",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
