--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "parse-json": "^6.0.2",
     "parse-jsonp": "^2.0.0",
     "vue-content-loader": "0.2",
+    "vue-silentbox": "^2.4.6",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
