try to make animation for band description

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "parse-jsonp": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue-content-loader": "0.2",
+    "vue-parallax-js": "^0.2.3",
     "vue-silentbox": "^2.4.6",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
