--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "v-viewer": "^1.6.4",
     "vue-content-loader": "0.2",
+    "vue-prlx": "^1.3.4",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
