--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "v-viewer": "^1.6.4",
     "vue-content-loader": "0.2",
+    "vue-loading-skeleton": "^1.1.9",
     "vue-prlx": "^1.3.4",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
