--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "parse-jsonp": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "v-viewer": "^1.6.4",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-content-loader": "0.2",
     "vue-loading-skeleton": "^1.1.9",
     "vue-prlx": "^1.3.4",
