--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@vue/runtime-dom": "^3.2.47",
     "aos": "^2.3.4",
     "core-js": "^3.15.1",
     "daisyui": "^2.14.1",
