--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "v-viewer": "^1.6.4",
     "vue-content-loader": "0.2",
+    "vue-fragment": "^1.6.0",
     "vue-loading-skeleton": "^1.1.9",
     "vue-prlx": "^1.3.4",
     "vue-tailwind": "^2.4.2",
