--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "parse-jsonp": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "v-viewer": "^1.6.4",
+    "vue-clickaway": "^2.2.2",
     "vue-content-loader": "0.2",
     "vue-loading-skeleton": "^1.1.9",
     "vue-prlx": "^1.3.4",
