--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-prlx": "^1.3.4",
     "vue-tailwind": "^2.4.2",
     "vue-template-compiler": "^2.6.14",
+    "vue-youtube-embed": "^2.2.2",
     "vue2-touch-events": "^3.2.2",
     "webpack": "^4.46.0"
   },
