--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@vue/runtime-dom": "^3.2.47",
     "aos": "^2.3.4",
+    "contentful-management": "^10.35.5",
     "core-js": "^3.15.1",
     "daisyui": "^2.14.1",
     "epic-spinners": "^1.1.0",
