--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
     "@emailjs/browser": "^3.10.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/markdownit": "^2.0.0",
